Portada, logo, todo mayusculas

--- a/README
+++ b/README
@@ -27,3 +27,7 @@ npx swa start http://localhost:5173 --api-devserver-url http://localhost:7071
 
 
 Frontend: http://localhost:4280
+
+
+Para pasar proyecto a Gemini:
+./fusionar.sh .
